--- a/style.css
+++ b/style.css
@@ -29,21 +29,37 @@ body {
 .mainContent__city {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  text-align: center;
+  margin: 0;
 }
 .mainContent__box {
   width: 50%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-direction: column;
   align-items: center;
 }
+.mainContent__box img {
+  width: 60%;
+}
 .mainContent__titles {
-  border: 1px solid white;
+  border-style: solid;
+  border-width: 1px 0 1px 0;
+  border-color: #ffffff;
   width: 100%;
   height: 10%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  align-items: center;
+}
+.mainContent__values {
+  font-size: 1.3em;
+  height: 1em;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
